@@ -9,7 +9,9 @@
 #include <qwidget.h>
 #include <qmainwindow.h>
 
+class QCheckBox;
 class QComboBox;
+class QLineEdit;
 class QPixmap;
 class QTabWidget;
 
@@ -35,8 +37,21 @@ class QGaimAccountEditor : public QMainWindow
 		QString protocolId;
 		GaimProtocol protocol;
 
-		QComboBox *protocolList;
+		GList *userSplitEntries;
+		GList *protocolOptEntries;
+
+		GaimProxyType newProxyType;
+
 		QTabWidget *tabs;
+
+		/* Account tab */
+		QComboBox *protocolList;
+		QLineEdit *screenNameEntry;
+		QLabel *passwordLabel;
+		QLineEdit *passwordEntry;
+		QLineEdit *aliasEntry;
+		QCheckBox *rememberPassCheck;
+		QCheckBox *autoLoginCheck;
 };
 
 #endif /* _QGAIM_ACCOUNT_EDITOR_H_ */
