@@ -1,3 +1,9 @@
+Mon Jul 28 03:15:08 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountEditor.cpp:
+	* src/QGaimAccountEditor.h:
+	  - Added a bit more to the account editor dialog.
+
 Mon Jul 28 01:46:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountEditor.cpp:
